== 0.3.0.rc2

* Bugfix
  * i18n some bugfix i18n
  * i18n download willpaginate i18n file
  * Body hidden in firefox
  * Add space after icon for some button


== 0.3.0.rc1

* enhancement
  * Refactoring i18n (avoid reserved words) :
  *   t(:my_model) -> t('models.my_model.caption')
  *   t(:my_attribute) -> t('models.my_model.attributes.my_attribute')
  * Add javascript/css to change DOM for a fixed menu
  * Add responsive menu
  * Update for rails 4
  * Replace PJAX with turbolinks
  * Update prawn version 1.0.0.rc2
  * Big refactoring with javascript
  * Using twitter-bootstrap-rails with turbolinks compatibility and last version of bootstrap and fontawesome
  * Generate locale file with auto translation

* Bugfix
  * Avoid to re-generate created_at, updated_at, id search field at each migration
  * Bugfix for several responsive behavior

== 0.2.7

* enhancement
  * Info class for input with content in search form
  * Add current locale for price in number_to_currency

* Bugfix
  * Add type decimal for align
  * Bug css rules ignored for alignment in table (td, th)

== 0.2.6

* Bugfix
  * Thanks to : gregwis Problem with models ending with s (http://api.rubyonrails.org/classes/ActiveSupport/Inflector.html#method-i-classify)

== 0.2.5

* enhancement
  * Capitalize label (forms)
  * Capitalize placeholder (massinserting)

* Bugfix
  * Massinserting with boolean
  * Treeview with namespace works

== 0.2.4

* Bugfix
  * Massinserting with 'admin' namespace

== 0.2.3

* enhancement
  * Add preselect collection_select in mass inserting with filter params
  * Adapt ransack_field helper for nested resource
  * Add custom caption for treeview element in build_treeview helper
  * I18n for menu
  * I18n for fields name (placeholder mass inserting and select fields)
  * I18n for title h2
  * I18n for button New
  * Show caption in table instead of #id

== Previous versions

* See commits on github