@@ -25,6 +25,7 @@
 //= require markitup/sets/textile/set
 //= require markitup/sets/wiki/set
 //= require tagit.js
+//= require chardinjs
 //= require beautiful_scaffold
 //= require fixed_menu
 
