@@ -147,6 +147,12 @@ function bs_init(){
         $(this).barcode($(this).attr('data-barcode'), $(this).attr('data-type-barcode'));
     });
 
+    // Chardinjs (overlay instructions)
+    $(".bs-chardinjs").on("click", function(){
+        var selector = $(this).attr("data-selector");
+        $(selector).chardinJs('toggle');
+    });
+
     // Mass inserting set focus
     elt = $('form.mass-inserting div[style*="inline"][class*="col"] .input-small').first();
     if($('form.mass-inserting').hasClass('setfocus')){
